--- a/_posts/0000-01-02-cgteow.md
+++ b/_posts/0000-01-02-cgteow.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our cgteow slide!"
 ---
-This is my awesome's slide
+This is my awesome slide
 Use the left arrow to go back!
